--- a/index.html
+++ b/index.html
@@ -7,127 +7,130 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
-        :root { --accent-color: #00FF55; --accent-glow: rgba(0, 255, 85, 0.4); }
-        body { background: #050608; color: #fff; font-family: 'Plus Jakarta Sans', sans-serif; min-height: 100vh; margin: 0; overflow-x: hidden; }
-        .bg-space { position: fixed; inset: 0; background: radial-gradient(circle at 50% 50%, #0a0c18 0%, #050608 100%); z-index: -2; }
-        .bg-grid { position: fixed; inset: 0; background-image: linear-gradient(var(--accent-glow) 1px, transparent 1px), linear-gradient(90deg, var(--accent-glow) 1px, transparent 1px); background-size: 60px 60px; transform: perspective(500px) rotateX(60deg) translateY(-100px); opacity: 0.2; animation: moveGrid 20s linear infinite; z-index: -1; }
-        @keyframes moveGrid { 0% { background-position: 0 0; } 100% { background-position: 0 600px; } }
-        .glow-title { text-shadow: 0 0 50px var(--accent-color); font-style: italic; }
-        .neo-card { background: rgba(13, 15, 20, 0.85); border: 1px solid rgba(255, 255, 255, 0.05); border-left: 4px solid var(--accent-color); backdrop-filter: blur(20px); transition: 0.3s; cursor: pointer; }
-        .neo-card.offline { border-left-color: #ef4444 !important; opacity: 0.35; filter: grayscale(0.6); }
-        .cwela-label { color: rgba(255, 255, 255, 0.15); font-weight: 900; font-size: 8px; text-transform: uppercase; letter-spacing: 0.1em; }
-        .btn-toggle { background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.1); height: 45px; color: rgba(255,255,255,0.5); font-weight: 700; }
-        .btn-toggle.active { background: var(--accent-color) !important; color: #000 !important; box-shadow: 0 0 35px var(--accent-color); border-color: white; font-weight: 900; }
-        .btn-refresh { background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.1); height: 45px; color: white; font-weight: 900; }
-        .btn-refresh:active { background: var(--accent-color); color: #000; transform: scale(0.95); }
-        .fav-star { transition: 0.2s; color: rgba(255,255,255,0.05); width: 16px; cursor: pointer; }
-        .fav-star.active { color: #FFD700; filter: drop-shadow(0 0 5px #FFD700); }
-        #overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.9); backdrop-filter: blur(15px); z-index: 100; align-items: center; justify-content: center; }
-        .modal-box { background: #0f1116; border: 1px solid var(--accent-color); width: 90%; max-width: 400px; padding: 30px; border-radius: 20px; }
+        :root { --accent: #00FF55; --accent-glow: rgba(0, 255, 85, 0.3); }
+        body { background: #050608; color: #fff; font-family: 'Plus Jakarta Sans', sans-serif; min-height: 100vh; margin: 0; }
+        .bg-grid { position: fixed; inset: 0; background-image: linear-gradient(var(--accent-glow) 1px, transparent 1px), linear-gradient(90deg, var(--accent-glow) 1px, transparent 1px); background-size: 50px 50px; transform: perspective(500px) rotateX(60deg) translateY(-100px); opacity: 0.15; z-index: -1; transition: 0.5s; }
+        .glow-text { text-shadow: 0 0 30px var(--accent); transition: 0.3s; }
+        .neo-card { background: rgba(15, 17, 22, 0.8); border: 1px solid rgba(255, 255, 255, 0.05); border-left: 4px solid var(--accent); backdrop-filter: blur(10px); transition: 0.3s; cursor: pointer; }
+        .neo-card:hover { transform: scale(1.02); background: rgba(20, 22, 28, 0.9); }
+        .cwela-label { color: rgba(255, 255, 255, 0.1); font-weight: 900; font-size: 8px; text-transform: uppercase; letter-spacing: 0.1em; }
+        .id-num { color: var(--accent); font-weight: 900; font-size: 1.8rem; font-style: italic; transition: 0.3s; }
+        .color-input { width: 30px; height: 30px; border: none; background: transparent; cursor: pointer; }
+        .color-input::-webkit-color-swatch { border-radius: 50%; border: 2px solid white; }
     </style>
 </head>
-<body class="py-10 px-6">
-    <div class="bg-space"></div><div class="bg-grid"></div>
-    <div id="overlay" onclick="closeModal()">
-        <div class="modal-box text-center" onclick="event.stopPropagation()">
-            <h2 id="modalName" class="text-3xl font-black italic uppercase mb-2">---</h2>
-            <div id="modalStatus" class="font-bold mb-4 uppercase text-xl">---</div>
-            <div class="grid grid-cols-2 gap-4 mb-6 text-left">
-                <div class="bg-white/5 p-3 rounded border border-white/5">
-                    <span class="text-[9px] text-white/30 uppercase block font-bold">Sesja</span>
-                    <span id="modalSession" class="text-lg font-black text-white">---</span>
-                </div>
-                <div class="bg-white/5 p-3 rounded border border-white/5 text-right">
-                    <span class="text-[9px] text-white/30 uppercase block font-bold">Ostatnio</span>
-                    <span id="modalLastSeen" class="text-lg font-black text-white">---</span>
-                </div>
+<body class="p-6">
+    <div class="bg-grid" id="grid"></div>
+
+    <div class="max-w-4xl mx-auto flex flex-col items-center">
+        <div class="text-center mb-8">
+            <h1 class="text-5xl md:text-7xl font-black uppercase glow-text" id="mainTitle">GRANDRP <span style="color: var(--accent)">TRACKER</span></h1>
+            <p class="text-[10px] font-bold tracking-[0.5em] text-white/20 mt-2 uppercase">by PRZMX</p>
+        </div>
+
+        <div class="flex flex-wrap justify-center gap-4 mb-8 bg-white/5 p-4 rounded-2xl border border-white/10">
+            <div class="flex items-center gap-3 pr-4 border-r border-white/10">
+                <input type="color" id="picker" oninput="changeColor(this.value)" class="color-input">
+                <span id="hexCode" class="font-mono text-xs font-bold text-white/50">#00FF55</span>
             </div>
-            <div id="modalLogs" class="bg-white/5 p-4 rounded text-[10px] font-mono text-blue-300 break-all border border-white/5"></div>
-            <button onclick="closeModal()" class="mt-6 w-full py-3 bg-white/5 border border-white/10 rounded font-bold uppercase hover:bg-white hover:text-black">Zamknij</button>
-        </div>
-    </div>
-    <div class="max-w-7xl mx-auto flex flex-col items-center">
-        <div class="text-center mb-10">
-            <h1 class="text-6xl md:text-9xl font-black uppercase glow-title leading-tight">GRANDRP <span style="color: var(--accent-color)">TRACKER</span></h1>
-            <p class="text-[10px] font-black tracking-[0.8em] text-white/20 uppercase mt-2">by PRZMX</p>
-        </div>
-        <div class="flex flex-wrap justify-center gap-4 mb-10">
-            <div class="flex items-center gap-3 px-4 py-2 rounded-xl bg-black/60 border border-white/10">
-                <input type="color" id="picker" oninput="updateAccentColor(this.value)" class="w-6 h-6 rounded bg-transparent border-none cursor-pointer">
-                <span id="hexLabel" class="text-[9px] font-black text-white uppercase">#00FF55</span>
+            <button onclick="fetchData()" class="px-6 py-2 bg-white/5 hover:bg-white/10 rounded-xl text-[10px] font-black uppercase tracking-widest transition-all">Odśwież</button>
+            <div class="px-6 py-2 bg-black/40 rounded-xl text-[10px] font-black uppercase">
+                Online: <span id="count" style="color: var(--accent)">0</span>
             </div>
-            <button onclick="toggleFavorites()" id="favToggleBtn" class="btn-toggle px-8 py-2 rounded-xl text-[10px] uppercase">Ulubione</button>
-            <button onclick="fetchData()" class="btn-refresh px-8 py-2 rounded-xl text-[10px] uppercase">Odśwież</button>
         </div>
-        <div class="max-w-xl w-full mb-8">
-            <input type="text" id="search" placeholder="WPISZ ID LUB NICK..." class="w-full bg-black/40 py-5 px-4 text-white outline-none font-black text-2xl placeholder-white/5 uppercase text-center border-b-2" style="border-color: var(--accent-color)" oninput="render()">
-            <div class="text-center mt-4 uppercase text-[10px] font-black text-white/30">ONLINE: <span id="count" style="color: var(--accent-color)">0</span></div>
+
+        <div class="w-full max-w-xl mb-10">
+            <input type="text" id="search" placeholder="SZUKAJ NICKU LUB ID..." oninput="render()" 
+                   class="w-full bg-transparent border-b-2 border-white/10 py-4 text-center text-2xl font-black outline-none focus:border-white transition-all">
+            <div id="status" class="text-center text-[9px] mt-2 font-mono text-white/20 uppercase tracking-widest">Inicjalizacja systemu...</div>
         </div>
-        <div id="player-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 w-full"></div>
+
+        <div id="list" class="grid grid-cols-1 sm:grid-cols-2 gap-4 w-full"></div>
     </div>
+
     <script>
-        const srv = '8rml8v'; let players = [], favorites = JSON.parse(localStorage.getItem('przmx_favs')) || [], onlyFavs = false;
-        function getHist() { return JSON.parse(localStorage.getItem(`hist_${srv}`)) || {}; }
-        let hist = getHist();
-        function updateAccentColor(c) {
-            document.documentElement.style.setProperty('--accent-color', c);
-            const r = parseInt(c.slice(1,3),16), g = parseInt(c.slice(3,5),16), b = parseInt(c.slice(5,7),16);
+        const srvId = '8rml8v';
+        let players = [];
+        let accentColor = localStorage.getItem('przmx_color') || '#00FF55';
+
+        function changeColor(hex) {
+            accentColor = hex;
+            document.documentElement.style.setProperty('--accent', hex);
+            const r = parseInt(hex.slice(1,3),16), g = parseInt(hex.slice(3,5),16), b = parseInt(hex.slice(5,7),16);
             document.documentElement.style.setProperty('--accent-glow', `rgba(${r},${g},${b},0.3)`);
-            document.getElementById('picker').value = c;
-            document.getElementById('hexLabel').innerText = c.toUpperCase();
-            localStorage.setItem('przmx_color', c);
+            document.getElementById('hexCode').innerText = hex.toUpperCase();
+            localStorage.setItem('przmx_color', hex);
             render();
         }
+
         async function fetchData() {
-            const url = `https://servers-frontend.fivem.net/api/servers/single/${srv}`;
+            const status = document.getElementById('status');
+            status.innerText = "SKANOWANIE CFX.RE...";
+            status.style.color = "white";
+
+            // Używamy corsproxy.io - obecnie najbardziej stabilne dla FiveM
+            const target = `https://servers-frontend.fivem.net/api/servers/single/${srvId}`;
+            const proxy = `https://api.corsproxy.io/?url=${encodeURIComponent(target)}&cb=${Date.now()}`;
+
             try {
-                const res = await fetch(`https://api.allorigins.win/raw?url=${encodeURIComponent(url)}&t=${Date.now()}`);
+                const res = await fetch(proxy);
+                if (!res.ok) throw new Error("Błąd Proxy");
                 const data = await res.json();
+
                 if (data?.Data?.players) {
-                    const now = Date.now(); hist = getHist();
-                    const currentNames = data.Data.players.map(p => p.name);
-                    data.Data.players.forEach(p => {
-                        if (!hist[p.name]) hist[p.name] = { ids: [p.id], online: true, firstSeen: now, lastSeen: now };
-                        else { if (!hist[p.name].online) hist[p.name].firstSeen = now; hist[p.name].online = true; hist[p.name].lastSeen = now; if (!hist[p.name].ids.includes(p.id)) hist[p.name].ids.push(p.id); }
-                    });
-                    Object.keys(hist).forEach(name => { if (!currentNames.includes(name)) hist[name].online = false; });
-                    localStorage.setItem(`hist_${srv}`, JSON.stringify(hist));
-                    players = data.Data.players.sort((a,b) => a.id - b.id); render();
+                    players = data.Data.players.sort((a, b) => a.id - b.id);
+                    status.innerText = "DANE ZSYNCHRONIZOWANE";
+                    status.style.color = accentColor;
+                    render();
+                } else {
+                    status.innerText = "SERWER NIE ODPOWIADA (OFFLINE?)";
                 }
-            } catch (e) { render(); }
+            } catch (e) {
+                status.innerText = "BŁĄD POŁĄCZENIA - SPRÓBUJ PONOWNIE";
+                status.style.color = "#ef4444";
+            }
         }
+
         function render() {
-            const val = document.getElementById('search').value.toLowerCase();
-            const container = document.getElementById('player-list'); container.innerHTML = "";
+            const query = document.getElementById('search').value.toLowerCase();
+            const container = document.getElementById('list');
+            container.innerHTML = "";
+
             const isGoat = (n) => ['przmx','kejcpi','razees'].some(g => n.toLowerCase().includes(g));
-            const source = val.length > 0 ? Object.keys(hist) : players.map(p => p.name);
-            source.forEach(name => {
-                const h = hist[name]; if(!h) return;
-                const id = h.online ? (players.find(p => p.name === name)?.id || h.ids.slice(-1)[0]) : h.ids.slice(-1)[0];
-                if (val && !name.toLowerCase().includes(val) && !id.toString().includes(val)) return;
-                if (onlyFavs && !favorites.includes(name)) return;
-                if (!val && !h.online && !onlyFavs) return;
-                const card = document.createElement('div'); card.className = `neo-card flex justify-between items-center ${!h.online ? 'offline' : ''}`;
-                card.onclick = () => openModal(name); const goat = isGoat(name);
-                card.innerHTML = `<div class="min-w-0 flex-1 pr-2"><div class="flex items-center gap-2 mb-1"><span class="cwela-label" style="color: ${h.online ? (goat ? '#fff' : 'rgba(255,255,255,0.15)') : 'rgba(239,68,68,0.4)'}">${h.online ? (goat ? "NICK GOAT'A" : "NICK CWELA") : "OFFLINE"}</span><span onclick="event.stopPropagation(); toggleFav('${name}')" class="fav-star ${favorites.includes(name) ? 'active' : ''}">★</span></div><div class="font-bold truncate ${goat ? 'underline text-white' : 'text-slate-300'} text-sm">${name}</div></div><div class="text-3xl font-black italic shrink-0" style="color: ${h.online ? (goat ? '#fff' : 'var(--accent-color)') : '#ef4444'}">${id}</div>`;
+            const filtered = players.filter(p => 
+                p.name.toLowerCase().includes(query) || p.id.toString().includes(query)
+            );
+
+            document.getElementById('count').innerText = players.length;
+
+            filtered.forEach(p => {
+                const goat = isGoat(p.name);
+                const card = document.createElement('div');
+                card.className = "neo-card p-4 rounded-xl flex justify-between items-center";
+                card.innerHTML = `
+                    <div class="min-w-0 pr-4">
+                        <div class="cwela-label" style="color: ${goat ? 'white' : 'rgba(255,255,255,0.1)'}">
+                            ${goat ? "NICK GOAT'A" : "NICK CWELA"}
+                        </div>
+                        <div class="font-bold truncate ${goat ? 'underline text-white' : 'text-slate-400'} text-sm">
+                            ${p.name}
+                        </div>
+                    </div>
+                    <div class="id-num">${p.id}</div>
+                `;
                 container.appendChild(card);
             });
-            document.getElementById('count').innerText = players.length;
         }
-        function openModal(n) {
-            const h = hist[n]; const now = Date.now(); document.getElementById('modalName').innerText = n;
-            document.getElementById('modalStatus').innerText = h.online ? "ONLINE" : "OFFLINE";
-            document.getElementById('modalStatus').style.color = h.online ? "var(--accent-color)" : "#ef4444";
-            document.getElementById('modalSession').innerText = h.online ? `${Math.floor((now - (h.firstSeen || now)) / 60000)} min` : "-";
-            document.getElementById('modalLastSeen').innerText = new Date(h.lastSeen || now).toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
-            document.getElementById('modalLogs').innerText = `HISTORIA ID: ${h.ids.join(' → ')}`;
-            document.getElementById('overlay').style.display = 'flex';
-        }
-        function closeModal() { document.getElementById('overlay').style.display = 'none'; }
-        function toggleFav(n) { const i = favorites.indexOf(n); i === -1 ? favorites.push(n) : favorites.splice(i,1); localStorage.setItem('przmx_favs', JSON.stringify(favorites)); render(); }
-        function toggleFavorites() { onlyFavs = !onlyFavs; document.getElementById('favToggleBtn').classList.toggle('active', onlyFavs); render(); }
-        window.onload = () => { updateAccentColor(localStorage.getItem('przmx_color') || '#00FF55'); fetchData(); };
-        setInterval(fetchData, 20000);
+
+        // Start
+        window.onload = () => {
+            changeColor(accentColor);
+            document.getElementById('picker').value = accentColor;
+            fetchData();
+        };
+
+        // Auto-odświeżanie co 30 sekund
+        setInterval(fetchData, 30000);
     </script>
 </body>
 </html>
