--- a/index.html
+++ b/index.html
@@ -3,98 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrandRP Tracker</title>
+    <title>GrandRP Tracker - Personalized</title>
     <style>
         :root {
-            --neon-green: #00ff88;
+            --main-color: #00ff88; /* Domyślny neonowy zielony */
             --dark-bg: #050505;
         }
 
         body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            background-color: var(--dark-bg);
-            color: white;
-            font-family: 'Inter', sans-serif;
-            overflow-x: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            margin: 0; padding: 0; width: 100%; height: 100%;
+            background-color: var(--dark-bg); color: white;
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            overflow-x: hidden; display: flex; flex-direction: column; align-items: center;
         }
 
+        /* Tło 3D */
         .background-grid {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background-image: 
-                linear-gradient(to right, rgba(0, 255, 136, 0.05) 1px, transparent 1px),
-                linear-gradient(to bottom, rgba(0, 255, 136, 0.05) 1px, transparent 1px);
+                linear-gradient(to right, rgba(255, 255, 255, 0.02) 1px, transparent 1px),
+                linear-gradient(to bottom, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
             background-size: 50px 50px;
             transform: perspective(500px) rotateX(60deg);
-            transform-origin: center top;
-            z-index: -1;
+            transform-origin: center top; z-index: -1;
             mask-image: linear-gradient(to bottom, transparent, black);
         }
+
+        /* Personalizacja koloru w prawym górnym rogu */
+        .color-picker-container {
+            position: absolute; top: 20px; right: 20px;
+            background: rgba(255,255,255,0.05); padding: 10px;
+            border-radius: 8px; border: 1px solid rgba(255,255,255,0.1);
+            display: flex; align-items: center; gap: 10px; font-size: 12px;
+        }
+        #colorPicker { cursor: pointer; border: none; background: none; width: 30px; height: 30px; }
 
         .header { margin-top: 50px; text-align: center; }
         .header h1 {
             font-size: 64px; font-style: italic; font-weight: 900; margin: 0;
-            color: #fff; text-shadow: 0 0 20px var(--neon-green);
+            color: #fff; text-shadow: 0 0 20px var(--main-color);
             letter-spacing: -2px; text-transform: uppercase;
         }
-        .header span { color: var(--neon-green); }
+        .header span { color: var(--main-color); transition: 0.3s; }
 
         .top-nav { display: flex; gap: 15px; margin-top: 20px; }
         .nav-btn {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            color: #aaa; padding: 10px 20px; border-radius: 5px;
-            text-transform: uppercase; font-size: 12px; cursor: pointer; transition: 0.3s;
+            background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.2);
+            color: #aaa; padding: 10px 25px; border-radius: 4px;
+            text-transform: uppercase; font-size: 11px; font-weight: bold; cursor: pointer; transition: 0.3s;
         }
-        .nav-btn.active { border-color: var(--neon-green); color: white; box-shadow: 0 0 10px rgba(0, 255, 136, 0.3); }
+        .nav-btn.active { border-color: var(--main-color); color: white; box-shadow: 0 0 15px var(--main-color); }
 
         .search-container { margin-top: 60px; width: 100%; max-width: 600px; text-align: center; }
         .search-box {
             width: 100%; background: transparent; border: none;
-            border-bottom: 2px solid var(--neon-green); padding: 15px;
-            color: white; font-size: 32px; text-align: center; outline: none;
-            text-transform: uppercase; letter-spacing: 5px;
+            border-bottom: 3px solid var(--main-color); padding: 15px;
+            color: white; font-size: 38px; text-align: center; outline: none;
+            text-transform: uppercase; letter-spacing: 3px; transition: 0.3s;
         }
+        .search-box::placeholder { color: rgba(255, 255, 255, 0.1); }
 
         .online-status {
-            margin-top: 40px; border: 2px solid var(--neon-green);
-            border-radius: 50px; padding: 10px 40px; color: var(--neon-green);
-            font-weight: bold; text-transform: uppercase;
+            margin-top: 40px; border: 2px solid var(--main-color);
+            border-radius: 50px; padding: 10px 40px; color: var(--main-color);
+            font-weight: 900; text-transform: uppercase; transition: 0.3s;
         }
 
         #results {
-            margin-top: 30px; display: grid;
+            margin-top: 40px; display: grid;
             grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 15px; width: 90%; max-width: 1000px; padding-bottom: 50px;
+            gap: 20px; width: 90%; max-width: 1100px; padding-bottom: 100px;
         }
 
+        /* Ulepszone kafelki */
         .player-item {
             background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(0, 255, 136, 0.1);
-            padding: 15px; border-radius: 4px;
-            display: flex; justify-content: space-between; align-items: center;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(5px);
+            padding: 20px; border-radius: 8px;
+            display: flex; flex-direction: column; position: relative;
+            transition: transform 0.2s, border-color 0.2s;
+        }
+        .player-item:hover {
+            transform: translateY(-5px);
+            border-color: var(--main-color);
+            background: rgba(255, 255, 255, 0.06);
         }
 
-        .fav-star {
-            cursor: pointer; font-size: 20px; color: #444; transition: 0.2s;
+        .label-cwela {
+            font-size: 9px; color: var(--main-color); font-weight: bold;
+            text-transform: uppercase; margin-bottom: 5px; opacity: 0.7;
         }
-        .fav-star.is-fav { color: var(--neon-green); text-shadow: 0 0 10px var(--neon-green); }
-        .player-id { color: var(--neon-green); font-weight: bold; margin-left: 10px; }
+        .player-name { font-size: 18px; font-weight: bold; color: #eee; }
+        .player-id { 
+            position: absolute; bottom: 15px; right: 20px;
+            color: var(--main-color); font-weight: 900; font-size: 14px;
+        }
+        .fav-star {
+            position: absolute; top: 15px; right: 15px;
+            cursor: pointer; font-size: 20px; color: rgba(255,255,255,0.1);
+        }
+        .fav-star.is-fav { color: var(--main-color); text-shadow: 0 0 10px var(--main-color); }
     </style>
 </head>
 <body>
 
     <div class="background-grid"></div>
 
+    <div class="color-picker-container">
+        <span>KOLOR MOTYWU:</span>
+        <input type="color" id="colorPicker" value="#00ff88">
+    </div>
+
     <div class="header">
         <h1>GRANDRP <span>TRACKER</span></h1>
-        <div style="font-size: 8px; opacity: 0.4; letter-spacing: 4px;">BY PRZMX</div>
+        <div style="font-size: 8px; opacity: 0.4; letter-spacing: 4px;">SYSTEM OPERACYJNY BY PRZMX</div>
     </div>
 
     <div class="top-nav">
@@ -103,7 +126,7 @@
     </div>
 
     <div class="search-container">
-        <input type="text" id="searchInput" class="search-box" placeholder="SZUKAJ..." oninput="updateDisplay()">
+        <input type="text" id="searchInput" class="search-box" placeholder="SZUKAJ CWELA..." oninput="updateDisplay()">
     </div>
 
     <div class="online-status">
@@ -119,7 +142,13 @@
         
         let allPlayers = [];
         let favorites = JSON.parse(localStorage.getItem('fav_players')) || [];
-        let currentFilter = 'all'; // 'all' lub 'fav'
+        let currentFilter = 'all';
+
+        // Personalizacja koloru
+        const cp = document.getElementById('colorPicker');
+        cp.addEventListener('input', (e) => {
+            document.documentElement.style.setProperty('--main-color', e.target.value);
+        });
 
         async function fetchData() {
             try {
@@ -128,9 +157,7 @@
                 allPlayers = data.Data.players;
                 document.getElementById('onlineCount').innerText = allPlayers.length;
                 updateDisplay();
-            } catch (e) {
-                console.error("Błąd sieci:", e);
-            }
+            } catch (e) { console.error("Błąd sieci:", e); }
         }
 
         function toggleFavorite(name) {
@@ -166,11 +193,10 @@
                 const isFav = favorites.includes(p.name);
                 return `
                     <div class="player-item">
-                        <div>
-                            <span class="fav-star ${isFav ? 'is-fav' : ''}" onclick="toggleFavorite('${p.name}')">★</span>
-                            <span style="margin-left: 10px;">${p.name}</span>
-                        </div>
-                        <span class="player-id">ID: ${p.id}</span>
+                        <div class="label-cwela">NICK CWELA:</div>
+                        <div class="player-name">${p.name}</div>
+                        <span class="fav-star ${isFav ? 'is-fav' : ''}" onclick="toggleFavorite('${p.name}')">★</span>
+                        <div class="player-id">ID: ${p.id}</div>
                     </div>
                 `;
             }).join('');
