--- a/index.html
+++ b/index.html
@@ -3,107 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrandRP Tracker - Personalized</title>
+    <title>GrandRP Tracker - Blue Edition</title>
     <style>
         :root {
-            --main-color: #00ff88; /* Domyślny neonowy zielony */
-            --dark-bg: #050505;
+            --main-color: #0088ff; /* Startowy niebieski klimat */
+            --dark-bg: #030303;
+            --glass: rgba(255, 255, 255, 0.03);
         }
 
         body, html {
             margin: 0; padding: 0; width: 100%; height: 100%;
             background-color: var(--dark-bg); color: white;
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            font-family: 'Inter', 'Segoe UI', sans-serif;
             overflow-x: hidden; display: flex; flex-direction: column; align-items: center;
         }
 
-        /* Tło 3D */
         .background-grid {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background-image: 
-                linear-gradient(to right, rgba(255, 255, 255, 0.02) 1px, transparent 1px),
-                linear-gradient(to bottom, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
-            background-size: 50px 50px;
-            transform: perspective(500px) rotateX(60deg);
+                linear-gradient(to right, rgba(255, 255, 255, 0.01) 1px, transparent 1px),
+                linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 1px, transparent 1px);
+            background-size: 40px 40px;
+            transform: perspective(1000px) rotateX(60deg);
             transform-origin: center top; z-index: -1;
             mask-image: linear-gradient(to bottom, transparent, black);
         }
 
-        /* Personalizacja koloru w prawym górnym rogu */
         .color-picker-container {
             position: absolute; top: 20px; right: 20px;
-            background: rgba(255,255,255,0.05); padding: 10px;
-            border-radius: 8px; border: 1px solid rgba(255,255,255,0.1);
-            display: flex; align-items: center; gap: 10px; font-size: 12px;
+            background: var(--glass); padding: 8px 15px;
+            border-radius: 12px; border: 1px solid rgba(255,255,255,0.1);
+            display: flex; align-items: center; gap: 10px; font-size: 11px;
+            backdrop-filter: blur(10px); z-index: 100;
         }
-        #colorPicker { cursor: pointer; border: none; background: none; width: 30px; height: 30px; }
+        #colorPicker { cursor: pointer; border: none; background: none; width: 25px; height: 25px; }
 
-        .header { margin-top: 50px; text-align: center; }
+        .header { margin-top: 60px; text-align: center; }
         .header h1 {
-            font-size: 64px; font-style: italic; font-weight: 900; margin: 0;
-            color: #fff; text-shadow: 0 0 20px var(--main-color);
-            letter-spacing: -2px; text-transform: uppercase;
+            font-size: 58px; font-style: italic; font-weight: 900; margin: 0;
+            color: #fff; text-shadow: 0 0 30px var(--main-color);
+            letter-spacing: -1px; text-transform: uppercase;
         }
         .header span { color: var(--main-color); transition: 0.3s; }
 
-        .top-nav { display: flex; gap: 15px; margin-top: 20px; }
+        .top-nav { display: flex; gap: 10px; margin-top: 25px; }
         .nav-btn {
-            background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.2);
-            color: #aaa; padding: 10px 25px; border-radius: 4px;
-            text-transform: uppercase; font-size: 11px; font-weight: bold; cursor: pointer; transition: 0.3s;
+            background: var(--glass); border: 1px solid rgba(255, 255, 255, 0.1);
+            color: #888; padding: 12px 30px; border-radius: 8px;
+            text-transform: uppercase; font-size: 11px; font-weight: 800; cursor: pointer; transition: 0.3s;
         }
-        .nav-btn.active { border-color: var(--main-color); color: white; box-shadow: 0 0 15px var(--main-color); }
+        .nav-btn.active { border-color: var(--main-color); color: white; box-shadow: 0 0 20px var(--main-color); background: rgba(0, 136, 255, 0.1); }
 
-        .search-container { margin-top: 60px; width: 100%; max-width: 600px; text-align: center; }
+        .search-container { margin-top: 50px; width: 100%; max-width: 650px; text-align: center; }
         .search-box {
             width: 100%; background: transparent; border: none;
-            border-bottom: 3px solid var(--main-color); padding: 15px;
-            color: white; font-size: 38px; text-align: center; outline: none;
-            text-transform: uppercase; letter-spacing: 3px; transition: 0.3s;
+            border-bottom: 2px solid var(--main-color); padding: 15px;
+            color: white; font-size: 32px; text-align: center; outline: none;
+            text-transform: uppercase; letter-spacing: 4px; transition: 0.3s;
+            font-weight: 200;
         }
-        .search-box::placeholder { color: rgba(255, 255, 255, 0.1); }
 
         .online-status {
-            margin-top: 40px; border: 2px solid var(--main-color);
-            border-radius: 50px; padding: 10px 40px; color: var(--main-color);
-            font-weight: 900; text-transform: uppercase; transition: 0.3s;
+            margin-top: 30px; border: 1px solid var(--main-color);
+            border-radius: 50px; padding: 8px 25px; color: var(--main-color);
+            font-size: 12px; font-weight: 900; letter-spacing: 2px;
+            box-shadow: 0 0 15px rgba(0, 136, 255, 0.2);
+            animation: pulse 2s infinite;
         }
+        @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.6; } 100% { opacity: 1; } }
 
         #results {
             margin-top: 40px; display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 20px; width: 90%; max-width: 1100px; padding-bottom: 100px;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px; width: 90%; max-width: 1200px; padding-bottom: 100px;
         }
 
-        /* Ulepszone kafelki */
+        /* Lepsze kafelki */
         .player-item {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(5px);
-            padding: 20px; border-radius: 8px;
+            background: linear-gradient(145deg, rgba(255,255,255,0.05), rgba(255,255,255,0.01));
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            backdrop-filter: blur(12px);
+            padding: 25px; border-radius: 15px;
             display: flex; flex-direction: column; position: relative;
-            transition: transform 0.2s, border-color 0.2s;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
         .player-item:hover {
-            transform: translateY(-5px);
+            transform: translateY(-8px) scale(1.02);
             border-color: var(--main-color);
-            background: rgba(255, 255, 255, 0.06);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5), 0 0 20px rgba(0, 136, 255, 0.1);
         }
 
         .label-cwela {
-            font-size: 9px; color: var(--main-color); font-weight: bold;
-            text-transform: uppercase; margin-bottom: 5px; opacity: 0.7;
+            font-size: 10px; color: #fff; font-weight: 900;
+            background: var(--main-color); display: inline-block;
+            padding: 2px 8px; border-radius: 4px; margin-bottom: 12px;
+            align-self: flex-start; text-transform: uppercase;
         }
-        .player-name { font-size: 18px; font-weight: bold; color: #eee; }
-        .player-id { 
-            position: absolute; bottom: 15px; right: 20px;
-            color: var(--main-color); font-weight: 900; font-size: 14px;
+        .player-name { font-size: 20px; font-weight: 700; color: #fff; letter-spacing: 0.5px; }
+        
+        .player-id-box {
+            position: absolute; bottom: 20px; right: 25px;
+            text-align: right;
         }
+        .id-label { font-size: 9px; color: #555; display: block; text-transform: uppercase; }
+        .id-value { color: var(--main-color); font-weight: 900; font-size: 18px; }
+
         .fav-star {
-            position: absolute; top: 15px; right: 15px;
-            cursor: pointer; font-size: 20px; color: rgba(255,255,255,0.1);
+            position: absolute; top: 20px; right: 20px;
+            cursor: pointer; font-size: 22px; color: rgba(255,255,255,0.05);
+            transition: 0.2s;
         }
-        .fav-star.is-fav { color: var(--main-color); text-shadow: 0 0 10px var(--main-color); }
+        .fav-star.is-fav { color: var(--main-color); text-shadow: 0 0 15px var(--main-color); opacity: 1; }
+        .fav-star:hover { transform: scale(1.2); }
     </style>
 </head>
 <body>
@@ -111,13 +122,13 @@
     <div class="background-grid"></div>
 
     <div class="color-picker-container">
-        <span>KOLOR MOTYWU:</span>
-        <input type="color" id="colorPicker" value="#00ff88">
+        <span>MOTYW</span>
+        <input type="color" id="colorPicker" value="#0088ff">
     </div>
 
     <div class="header">
         <h1>GRANDRP <span>TRACKER</span></h1>
-        <div style="font-size: 8px; opacity: 0.4; letter-spacing: 4px;">SYSTEM OPERACYJNY BY PRZMX</div>
+        <div style="font-size: 9px; opacity: 0.3; letter-spacing: 6px; margin-top: 5px;">PRZMX EXCLUSIVE</div>
     </div>
 
     <div class="top-nav">
@@ -144,7 +155,6 @@
         let favorites = JSON.parse(localStorage.getItem('fav_players')) || [];
         let currentFilter = 'all';
 
-        // Personalizacja koloru
         const cp = document.getElementById('colorPicker');
         cp.addEventListener('input', (e) => {
             document.documentElement.style.setProperty('--main-color', e.target.value);
@@ -154,10 +164,11 @@
             try {
                 const response = await fetch(proxyUrl + encodeURIComponent(apiUrl));
                 const data = await response.json();
+                // Pobieramy prawdziwe ID graczy z obiektu player.id
                 allPlayers = data.Data.players;
                 document.getElementById('onlineCount').innerText = allPlayers.length;
                 updateDisplay();
-            } catch (e) { console.error("Błąd sieci:", e); }
+            } catch (e) { console.error("API Error:", e); }
         }
 
         function toggleFavorite(name) {
@@ -189,14 +200,20 @@
                 filtered = filtered.filter(p => favorites.includes(p.name));
             }
 
+            // Sortowanie po ID serwerowym
+            filtered.sort((a, b) => a.id - b.id);
+
             container.innerHTML = filtered.map(p => {
                 const isFav = favorites.includes(p.name);
                 return `
                     <div class="player-item">
-                        <div class="label-cwela">NICK CWELA:</div>
+                        <div class="label-cwela">NICK CWELA</div>
                         <div class="player-name">${p.name}</div>
                         <span class="fav-star ${isFav ? 'is-fav' : ''}" onclick="toggleFavorite('${p.name}')">★</span>
-                        <div class="player-id">ID: ${p.id}</div>
+                        <div class="player-id-box">
+                            <span class="id-label">SERVER ID</span>
+                            <span class="id-value">#${p.id}</span>
+                        </div>
                     </div>
                 `;
             }).join('');
